--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -6,6 +6,7 @@
         return vacancy.Status != ProviderVacancyStatuses.RejectedByQA;
     }
 }
+@using SFA.Apprenticeships.Domain.Entities.Vacancies
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Infrastructure.Presentation
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.ProviderUser
@@ -62,6 +63,7 @@
     {
         @Html.AntiForgeryToken()
 
+        @Html.HiddenFor(m => m.VacanciesSummary.VacanciesSummarySearch.VacancyType)
         @Html.HiddenFor(m => m.VacanciesSummary.VacanciesSummarySearch.FilterType)
 
         <section class="grid-wrapper">
@@ -244,8 +246,16 @@
                             <button id="search-vacancies-button" class="button" name="SearchVacanciesAction" value="SearchVacancies">Search vacancies</button>
                         </div>
                     </details>
-                    <div class="tabbed-element tab1 active width-all-1-1">
-                        <table class="no-btm-margin" id="vacancies-table">
+                    <nav class="tabbed-nav">
+                        @{
+                            var apprenticeshipsTabControlClass = Model.VacanciesSummary.VacanciesSummarySearch.VacancyType == VacancyType.Apprenticeship ? " active" : "";
+                            var traineeshipsTabControlClass = Model.VacanciesSummary.VacanciesSummarySearch.VacancyType == VacancyType.Traineeship ? " active" : "";
+                        }
+                        @Html.RouteLink("Apprenticeships", RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacancyType.Apprenticeship), new {@class = "tabbed-tab" + apprenticeshipsTabControlClass })
+                        @Html.RouteLink("Traineeships", RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, VacancyType.Traineeship), new {@class = "tabbed-tab" + traineeshipsTabControlClass })
+                    </nav>
+                    <div class="tabbed-content active width-all-1-1">
+                        <table id="vacancies-table">
                             <colgroup>
                                 <col class="t25">
                                 <col class="t15">
