Updated about traineeships content

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreview.cshtml
@@ -350,21 +350,22 @@
         <div class="grid grid-2-3">
             <div class="inner-block-padr">
                 <p>
-                    This Traineeship work experience is part of an education and training programme that is focussed on giving young people the skills and experience that employers are looking for. At its core is Work Preparation training, English and Maths for those who need it, and a high quality work experience placement.
+                    A traineeship is a course with work experience that gets you ready for work or an apprenticeship. It can last up to 6 months.<br/>
+                    You can apply if you’re:
+                    <ul>
+                        <li>eligible to work in England</li>
+                        <li>unemployed and have little or no work experience</li>
+                        <li>aged 16 to 24 and qualified below Level 3</li>
+                    </ul>
                 </p>
                 <p>
-                    Traineeships help unlock your great potential and give you the work preparation training, Maths and English and work experience needed to get an Apprenticeship or other job.
+                    You’ll get:
+                    <ul>
+                        <li>a work experience placement</li>
+                        <li>help with English and maths (if you need it)</li>
+                    </ul>
                 </p>
-                <p>
-                    This Traineeship Opportunity is unwaged.
-                </p>
-                <p>
-                    Are you eligible?<br />
-                    1. Are you currently NOT in a job? Do you have little or no Work Experience?<br />
-                    2. Are you aged 16 to 24 and qualified below Level 3 ( A levels)<br />
-                    3. Are you motivated and think you could be ready for employment or an apprenticeship within 6 months?<br />
-                    Look no further than a Traineeship Position
-                </p>
+                <p>You won’t be paid, but you may be given expenses for things like travel and meals.</p>
             </div>
         </div>
     </section>
