Ensure vacancies without a type are not lost when returning to dashboard and that traineeship tab doesn't dissapear

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -58,7 +58,7 @@
     </section>
 }
 
-@if(Model.VacanciesSummary.TotalCount > 0)
+@if(Model.VacanciesSummary.HasVacancies)
 {
     using (Html.BeginForm(null, "ProviderUser", FormMethod.Post, new { name = "vacancy-search-form" }))
     {
