--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -23,13 +23,13 @@
             <div class="page-link">
                 <div class="form-group">
                     <p class="form-label">Change role</p>
-                    @Html.DropDownListFor(m => m.AgencyUser.AgencyUserRoleId, Model.AgencyUser.AgencyUserRoles)
+                    @Html.DropDownListFor(m => m.AgencyUser.RoleCode, Model.AgencyUser.Roles)
                 </div>
             </div>
             <div class="page-link">
                 <div class="form-group">
                     <p class="form-label">Change team</p>
-                    @Html.DropDownListFor(m => m.AgencyUser.AgencyUserTeamId, Model.AgencyUser.AgencyUserTeams)
+                    @Html.DropDownListFor(m => m.AgencyUser.TeamCode, Model.AgencyUser.Teams)
                 </div>
             </div>
             <div style="text-align: right">
