Search for candidate form

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -1,7 +1,4 @@
-﻿@using SFA.Apprenticeships.Infrastructure.Presentation
-@using SFA.Apprenticeships.Web.Manage.Constants
-@using SFA.Apprenticeships.Web.Manage.ViewModels
-@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
+﻿@using SFA.Apprenticeships.Web.Manage.Constants
 @model SFA.Apprenticeships.Web.Manage.ViewModels.HomeViewModel
 
 @{
