Client side validation complete

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
@@ -13,6 +13,9 @@
 
 @using (Html.BeginRouteForm(ManagementRouteNames.SearchCandidates, FormMethod.Post))
 {
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
     <div class="form-group">
         @Html.FormTextFor(
             m => m.SearchViewModel.FirstName,
