--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -10,6 +10,6 @@
 @if (Model.Status.CanWithdrawVacancy())
 {
     <p class="small-btm-margin">
-        <a href="">Withdraw</a>
+        <a href="">Withdraw this vacancy</a>
     </p>
 }
