--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -41,7 +41,7 @@
                 </div>
                 <div class="grid grid-1-3">
                     <p class="small-btm-margin">
-                        Closing Date: @Model.ClosingDate.Date.ToFriendlyClosingToday()
+                        Closing date: @Model.ClosingDate.Date.ToFriendlyClosingToday()
                     </p>
                     @Html.Partial(VacancyLinksViewModel.PartialView, new VacancyLinksViewModel(Model.VacancyApplicationsSearch.VacancyReferenceNumber, Model.Status))
                 </div>
