--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
@@ -6304,6 +6304,12 @@ h2 a i.raa-icon-comment {
     padding: 0 10px 0 0;
     width: 25%; } }
 
+.candidate-name {
+  font-weight: bold; }
+
+.candidate-address {
+  list-style-type: none; }
+
 .applicant-location,
 .applicant-distance {
   display: block; }
