Fixing date of birth issue

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
@@ -84,7 +84,7 @@
                                     <li>@candidate.Address.Postcode</li>
                                 </ul>
                             </td>
-                            <td>@candidate.DateOfBirth.ToShortDateString()</td>
+                            <td>@candidate.DateOfBirth.ToDateOfBirthString()</td>
                             <td>
                                 <a href="#">Select candidate</a>
                             </td>
