--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardHelpDesk.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardHelpDesk.cshtml
@@ -4,5 +4,5 @@
         Search for candidate
     </h2>
     <p>Search for a candidate by first or last name, postcode or date of birth</p>
-    @Html.RouteLink("Search for candidate", ManagementRouteNames.SearchCandidates, null, new { @class = "button" })
+    @Html.RouteLink("Search for candidate", ManagementRouteNames.Candidates, null, new { @class = "button" })
 </section>
