--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
@@ -12,7 +12,7 @@
     Search for a candidate
 </h1>
 
-@using (Html.BeginRouteForm(ManagementRouteNames.SearchCandidates, FormMethod.Post))
+@using (Html.BeginForm(null, "Candidate", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -36,8 +36,8 @@
     </div>
 
     <div class="form-group">
-        <button type="submit" class="button">Search</button>
-        @Html.RouteLink("Reset search", ManagementRouteNames.ReviewVacancy)
+        <button type="submit" class="button" name="SearchCandidatesAction" value="SearchCandidates">Search</button>
+        @Html.RouteLink("Reset search", ManagementRouteNames.Candidates)
     </div>
 }
 
