--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
@@ -61,7 +61,7 @@
     {
         <div class="grid-wrapper">
             <div class="grid grid-1-1">
-                <p>
+                <p class="candidate-results-count">
                     @if (Model.Candidates.ResultsCount == 1)
                     {
                         <span>Found 1 candidate</span>
