--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -2,7 +2,7 @@
 @using SFA.Apprenticeships.Domain.Entities.Applications
 @using SFA.Apprenticeships.Domain.Entities.Vacancies
 
-@model SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications.MyApplicationsViewModel
+@model SFA.Apprenticeships.Web.Common.ViewModels.MyApplications.MyApplicationsViewModel
 
 @{
     ViewBag.Title = "My applications - Find an apprenticeship";
